force-app/main/default/objects/BLN_CardTypeMaster__mdt/BLN_CardTypeMaster__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Card Type Master</label>
    <pluralLabel>Card Type Masters</pluralLabel>
</CustomObject>