force-app/main/default/objects/BLN_CardTypeMaster__mdt/fields/BLN_CardLength__c.field-meta.xml
<CustomField>
    <fullName>BLN_CardLength__c</fullName>
    <description>FOUK-3977 This is used on BLN_SCUtility class</description>
    <label>Card Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>