force-app/main/default/objects/BLN_CardTypeMaster__mdt/fields/BLN_CardType__c.field-meta.xml
<CustomField>
    <fullName>BLN_CardType__c</fullName>
    <description>FOUK-3977 This is used in Bln_SCutility class</description>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB Carte Bleue</fullName>
            </value>
            <value>
                <fullName>On-line Carte Bleue</fullName>
            </value>
            <value>
                <fullName>BB Diners</fullName>
            </value>
            <value>
                <fullName>BB Amex</fullName>
            </value>
            <value>
                <fullName>On-line Amex</fullName>
            </value>
            <value>
                <fullName>BB JCB</fullName>
            </value>
            <value>
                <fullName>On-line JCB</fullName>
            </value>
            <value>
                <fullName>BB Visa</fullName>
            </value>
            <value>
                <fullName>On-line Visa</fullName>
            </value>
            <value>
                <fullName>BB Visa Delta</fullName>
            </value>
            <value>
                <fullName>BB Electron</fullName>
            </value>
            <value>
                <fullName>BB Maestro (Switch) IN</fullName>
            </value>
            <value>
                <fullName>BB Maestro International</fullName>
            </value>
            <value>
                <fullName>On-line International Maestro</fullName>
            </value>
            <value>
                <fullName>On-line Maestro</fullName>
            </value>
            <value>
                <fullName>BB Mastercard</fullName>
            </value>
            <value>
                <fullName>On-line Mastercard</fullName>
            </value>
            <value>
                <fullName>On-line LASER</fullName>
            </value>
            <value>
                <fullName>BB Laser (debit)</fullName>
            </value>
            <value>
                <fullName>BB Maestro (Switch) NO IN</fullName>
            </value>
            <value>
                <fullName>BB Solo IN</fullName>
            </value>
            <value>
                <fullName>BB Solo NO IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>