force-app/main/default/objects/BLN_CardTypeMaster__mdt/fields/BLN_CardTypeID__c.field-meta.xml
<CustomField>
    <fullName>BLN_CardTypeID__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Card Type ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>