force-app/main/default/objects/BLN_CardTypeMaster__mdt/fields/BLN_EndofRange__c.field-meta.xml
<CustomField>
    <fullName>BLN_EndofRange__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>End of Range</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>