force-app/main/default/objects/BLN_CardTypeMaster__mdt/fields/BLN_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentType__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECOMMERCE</fullName>
                <default>true</default>
                <label>ECOMMERCE</label>
            </value>
            <value>
                <fullName>CHIP &amp; PIN</fullName>
            </value>
            <value>
                <fullName>ONLINE PAYMENT</fullName>
            </value>
            <value>
                <fullName>BRANCH BANKING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>