force-app/main/default/objects/BLN_CardTypeMaster__mdt/fields/BLN_Status__c.field-meta.xml
<CustomField>
    <fullName>BLN_Status__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCutility class</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
                <default>true</default>
                <label>Valid</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>